test/sema/exercise/struct_void_member_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  nested: void,
  // CHECK: [[# @LINE - 1 ]]:3: error: struct member cannot be void
}

fn main(): void {}
